Create run.bat for compiling and running app
Add batch script to compile and run SecureNotesFX application